added abstract class GlApp

--- a/opengl-template/opengl-template.vcxproj
+++ b/opengl-template/opengl-template.vcxproj
@@ -134,7 +134,7 @@
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\GlWindow.h" />
+    <ClInclude Include="src\GlApp.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
