--- a/opengl-template/opengl-template.vcxproj.filters
+++ b/opengl-template/opengl-template.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="src\main.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\GlUtils.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\GlApp.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GlUtils.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
